Afegim /ar i modifiquem url formularis als nous

--- a/ar/index.html
+++ b/ar/index.html
@@ -6,13 +6,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Denuncia conxunta de afectados polo peche de Megaupload</title>
+  <title>شكوى جماعيه للمتضررين بسبب غلق ميجاأبلود</title>
   <link rel="stylesheet" href="/stylesheets/app.css">
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="/stylesheets/ie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <link href="https://plus.google.com/112149620641776669374" rel="publisher" />
+  <style>
+    * {
+      direction:rtl;
+    }
+  </style>
   <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-10848153-13']);
@@ -28,7 +33,7 @@
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3>Denuncia conxunta de afectados polo peche de Megaupload</h3>
+        <h3>شكوى جماعيه للمتضررين بسبب غلق ميجاأبلود</h3>
         <ul id="lang">
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
@@ -37,11 +42,11 @@
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
-            <p>O repentino peche de Megaupload pola parte das autoridades dos EE.UU. afectou a millóns de persoas que facían uso lexítimo deste servizo.</p>
-			<!-- AddThis Button BEGIN -->
+            <p>غلق شركة ميجاأبلود المفاجئ من قبل السلطه الامريكيه أثر على ملايين المستخدمين الشرعين.</p>
+		<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet" addthis:title="Denuncia conxunta de afectados polo peche de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
+            <a class="addthis_button_tweet" addthis:title="ﺶﻛﻭﻯ ﺞﻣﺎﻌﻴﻫ ﻞﻠﻤﺘﺿﺭﺮﻴﻧ ﺐﺴﺒﺑ ﻎﻠﻗ ﻢﻴﺟﺍﺄﺒﻟﻭﺩ" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
@@ -52,18 +57,20 @@
                 <a href="http://www.flickr.com/photos/rclupes/6729919585/"><img src="http://farm8.staticflickr.com/7027/6729919585_e2c1894234.jpg" alt="#20 - Megaupload by Ricard Clupés" title="#20 - Megaupload by Ricard Clupés"></a>
               </div>
             </div>
-            <p>O FBI causou danos incalculables, moi superiores ó beneficio que perseguían coa acción escomenzada, nun intento fallado de impedir ó acceso ós materiais audiovisuais aloxados en Megaupload que puideran infrinxir copyrights. Con todo, estes contidos seguen a estar dispoñibles noutros tantos servizos de Internet, evidenciando a ineficacia da medida.</p>
-            <p>Pola contra, co peche do servizo impediron o acceso a millóns de arquivos de particulares e organizacións, ocasionando graves danos persoais, económicos e de imaxe a millóns de persoas; e vulneraron o artigos 197 e 198 do Código Penal ó apropiárense indebidamente de datos de carácter persoal.</p>
-            <p>Os danos orixinados polo peche de Megaupload son totalmente inxustificados e inadmisibles. Por este motivo, Piratas de Galicia coa achega de Pirate Parties International e os partidos piratas adheridos a esta campaña, facilitará a presentación de denuncias contra as autoridades dos EE.UU. en varios países, e aumentará deste xeito as posibilidades de acadar unha condenación.</p>
-            <p>Para a realización desta demanda conxunta creouse unha plataforma de afectados polo peche de Megaupload, á que pode adherirse calquera persoa ou organización que fora perxudicada polo peche do servizo, independientemente do tipo de conta que tivera en Megaupload.</p>
-            <p>Esta iniciativo quere ser un punto de partida para que os lexítimos usuarios da Internet poidamos defendernos fronte ós abusos xudiciais estimulados polos lobbies culturais.</p>
-            <p>Independentemente da ideoloxía de cada quen e da opinión que poidamos ter en referencia a Megaupload, accións coma as realizadas co peche do servizo supoñen un inxente dano para os usuarios e unha violación inaceptable dos seus dereitos.</p>
-            <p>Polo dito, facemos un chamamento a todo o mundo co fin de sumar forzas á iniciativa e que se difunda, evidenciando que accións coma a presenciada non poden nin deben quedar impunes.</p>
-            <p><a href="https://xifrat.pirata.cat/commons/es/megaupload_es" class="hide-on-phones hide-on-tablets nice radius large blue button">¡Asóciate!</a></p>
-			<!-- AddThis Button BEGIN -->
+            <p>إن مركز الابحاث الفيدراليه الامريكي ( ف ب ي ) الحق أضرارا لاتحصى و اكثر بكثير من المنافع المتوقعه, وفي محاوله فاشله لحجب الوصول الى الميديا (المواد السمعيه والبصريه) المحمله في ميجاأبلود و التي  كان من المحتمل أن تتجاوز قوانين حقوق التأليف وفي نفس الوقت هذه المواد المحمله لازالت متوفره في العديد من الخدمات في الشبكه مما يثبت عدم كفائة القرار المتخذ.</p>
+            <p>على عكس المتوقع ,فان غلق هذه الخدمه حجب من الوصول الملايين من الملفات عن أصحابها ,سواء أفراد أو منظمات, وسبب اضرارا إقتصاديه و شخصيه مهمه و شوه صورتهم.</p>
+            <p>بالاضافه الى ذلك فان حزب البيراته العالمي يعتبر إنهم تجازوا البند 197-198 من قانون العقوبات الاسباني لتسلطهم الغير شرعي على ملفات شخصيه.
+الضرر العام الذي سببه غلق ميجاأبلود المفاجئ لايمكن تبريره ويتعارض تماما مع الهدف المقصود.</p>
+            <p>لكل هذا, فأن حزب البيراته الكتلاني و بالتعاون مع حزب البيراته العالمي باشر في البحث عن الشرخات المحتمله في القوانين المعتمده و سوف يقدم شكاوي ضد السلطات الامريكيه في كل البلدان الممكنه لضمان نتائج إجابيه و عادله.</p>
+            <p>لقد تم  إنشاء مجموعه حقوقيه من أجل القيام بشكوى مشتركه ويمكن لأي شخص أو منظمه متضرره بسبب الغلق, أن تنضم لهذه المجموعه بغض النظر عن نوع علاقتها بميجاأبلود.</p>
+            <p>إن هذه المبادره هي نقطة الانطلاق لمساعدة المستخدمين للدفاع عن أنفسهم أمام تجاوزات من يحاول أن يحجز مواد ثقافيه بالقوه و للأنتفاع منها ماديآ.</p>
+            <p>بغض النظر عن أراء أو شرعية المسؤولين عن إدارة ميجاأبلود فان هذه الخطوه سببت أضرار هائله للمستخدمين الشرعين وهي ليست مقبوله وتغتصب حقوقم.</p>
+            <p>نرجوا الجميع التعاون في تعميم النداء للانضمام لهذه المبادره حيث خطوات متجاوزه مثل هذه لايمكن غض النظر عنها.</p>
+            <p><a href="https://xifrat.pirata.cat/commons/en/megaupload_en" class="hide-on-phones hide-on-tablets nice radius large blue button">انضمام!</a></p>
+		<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet" addthis:title="Denuncia conxunta de afectados polo peche de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
+            <a class="addthis_button_tweet" addthis:title="Joint complaint of the affected by the closure of Megaupload #megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
@@ -73,9 +80,9 @@
         </div>
       </div>
       <div class="four columns">
-        <p><a href="https://xifrat.pirata.cat/commons/es/megaupload_es" class="nice radius large blue button wide">¡Asóciate!</a></p>
-        <p><a href="https://xifrat.pirata.cat/es/donacions" class="nice radius large white button wide">Donacións</a></p>
-        <h4>Unha iniciativa da</h4>
+        <p><a href="https://xifrat.pirata.cat/commons/en/megaupload_en" class="nice radius large blue button wide">انضمام!</a></p>
+        <p><a href="https://xifrat.pirata.cat/en/donacions" class="nice radius large white button wide">التبرعات</a></p>
+        <h4>مبادرة من</h4>
         <div class="row image">
           <a href="http://pirata.cat"><img src="/images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
         </div>
@@ -86,8 +93,8 @@
             <iframe class="social-button" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpirata.cat&amp;send=false&amp;layout=standard&amp;width=80&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35&amp;appId=178224635584623" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:24px;" allowTransparency="true"></iframe>
           </div>
         </div>
-        <h4>Outros promotores</h4>
-        <p>Estas organizacións sumáronse a campaña:</p>
+        <h4>غيرها من المروجين</h4>
+        <p>وقد أيد هذه المنظمات للحملة:</p>
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
