--- a/ca/index.html
+++ b/ca/index.html
@@ -33,7 +33,7 @@
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
           <li><a href="http://megaupload.pirata.cat/es/">Español</a></li>
-          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li>
+          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li><li><a href="http://megaupload.pirata.cat/ar/">لعربية</a></li>
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
@@ -59,7 +59,7 @@
             <p>Aquesta iniciativa vol ser un punt de partida per a què els usuaris legítims d'Internet puguem defensar-nos davant dels abusos judicials promoguts pels lobbies culturals.</p>
             <p>Independentment de la ideologia de cadascú i de la opinió que puguem tenir en referència a Megaupload, accions com les portades a terme amb el tancament del servei suposen un enorme perjudici per als usuaris i una vulneració inacceptable dels seus drets.</p>
             <p>Per tot l'exposat, fem una crida a la població per a què s'uneixi a la iniciativa i la difongui, entenent que accions com la presenciada no poden ni han de quedar impunes.</p>
-            <p><a href="https://xifrat.pirata.cat/megaupload_ca" class="hide-on-phones hide-on-tablets nice radius large blue button">Uneix-te!</a></p>
+            <p><a href="https://xifrat.pirata.cat/commons/megaupload_ca" class="hide-on-phones hide-on-tablets nice radius large blue button">Uneix-te!</a></p>
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="four columns">
-        <p><a href="https://xifrat.pirata.cat/megaupload_ca" class="nice radius large blue button wide">Uneix-te!</a></p>
+        <p><a href="https://xifrat.pirata.cat/commons/megaupload_ca" class="nice radius large blue button wide">Uneix-te!</a></p>
         <p><a href="https://xifrat.pirata.cat/donacions" class="nice radius large white button wide">Dóna</a></p>
         <h4>Una iniciativa de</h4>
         <div class="row image">
@@ -91,7 +91,7 @@
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
-          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li>
+          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li><li><a href="http://www.piratenpartei.de/">Piratenpartei Deutschland</a></li>
         </ul>
       </div>
     </div>
