--- a/es/index.html
+++ b/es/index.html
@@ -33,7 +33,7 @@
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
           <li><a href="http://megaupload.pirata.cat/es/">Español</a></li>
-          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li>
+          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li><li><a href="http://megaupload.pirata.cat/ar/">لعربية</a></li>
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
@@ -60,7 +60,7 @@
 </p>
             <p>Independientemente de la ideología de cada uno y de la opinión que podamos tener en referencia a Megaupload, acciones como las llevadas a cabo con el cierre del servicio suponen un enorme perjuicio para los usuarios y una vulneración inaceptable de sus derechos.</p>
             <p>Por todo lo anterior, realizamos un llamamiento a toda la población a fin de que se unan a la iniciativa y la difundan, entendiendo que acciones como la presenciada no pueden ni deben quedar impunes.</p>
-            <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="hide-on-phones hide-on-tablets nice radius large blue button">¡Únete!</a></p>
+            <p><a href="https://xifrat.pirata.cat/commons/es/megaupload_es" class="hide-on-phones hide-on-tablets nice radius large blue button">¡Únete!</a></p>
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="four columns">
-        <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="nice radius large blue button wide">¡Únete!</a></p>
+        <p><a href="https://xifrat.pirata.cat/commons/es/megaupload_es" class="nice radius large blue button wide">¡Únete!</a></p>
         <p><a href="https://xifrat.pirata.cat/es/donacions" class="nice radius large white button wide">Dona</a></p>
         <h4>Una iniciativa de</h4>
         <div class="row image">
@@ -92,7 +92,7 @@
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
-          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li>
+          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li><li><a href="http://www.piratenpartei.de/">Piratenpartei Deutschland</a></li>
         </ul>
       </div>
     </div>
