--- a/fr/index.html
+++ b/fr/index.html
@@ -33,7 +33,7 @@
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
           <li><a href="http://megaupload.pirata.cat/es/">Español</a></li>
-          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li>
+          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li><li><a href="http://megaupload.pirata.cat/ar/">لعربية</a></li>
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
@@ -59,7 +59,7 @@
             <p>Cette initiative est un point de départ pour aider les utilisateurs légitimes d’Internet à se défendre contre les abus légaux promus par ceux qui souhaitent cadenasser les ressources culturelles au profit de leurs propres gains financiers.</p>
             <p>Quelles que soient les opinions quant à la légalité ou la morale des personnes exploitant Megaupload, des actions telles que la fermeture de ce service ont infligé des dommages énormes aux utilisateurs en règle de ce site et sont des violations de leurs droits inacceptables et disproportionnées.</p>
             <p>Pour toutes les raisons énoncées, nous vous demandons de nous rejoindre et de nous soutenir en propageant cet appel, car des actes tels que ceux-ci ne doivent pas et ne devraient pas être pardonnés.</p>
-            <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="hide-on-phones hide-on-tablets nice radius large blue button">Joignez-vous!</a></p>
+            <p><a href="https://xifrat.pirata.cat/commons/en/megaupload_en" class="hide-on-phones hide-on-tablets nice radius large blue button">Joignez-vous!</a></p>
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="four columns">
-        <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="nice radius large blue button wide">Joignez-vous!</a></p>
+        <p><a href="https://xifrat.pirata.cat/commons/en/megaupload_en" class="nice radius large blue button wide">Joignez-vous!</a></p>
         <p><a href="https://xifrat.pirata.cat/en/donacions" class="nice radius large white button wide">Faire un don</a></p>
         <h4>Une initiative de</h4>
         <div class="row image">
@@ -91,7 +91,7 @@
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
-          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li>
+          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li><li><a href="http://www.piratenpartei.de/">Piratenpartei Deutschland</a></li>
         </ul>
       </div>
     </div>
