--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
           <li><a href="http://megaupload.pirata.cat/es/">Español</a></li>
-          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li>
+          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li><li><a href="http://megaupload.pirata.cat/ar/">لعربية</a></li>
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
@@ -60,7 +60,7 @@
             <p>Regardless of ideology, or opinions on the legality or morality of those running Megaupload, actions such as the closure of this service cause huge damage to lawful users of the sites and are unacceptable and disproportionate violations of their rights.</p>
             <p>For these reasons, we ask that everyone spread the call to join this initiative, as actions like this one cannot and should not be forgiven.</p>
 	    <p><em>Note: US citizens joining this campaign will be forwarded to <a href="https://www.eff.org/">EFF</a>.</em></p>
-            <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="hide-on-phones hide-on-tablets nice radius large blue button">Join!</a></p>
+            <p><a href="https://xifrat.pirata.cat/commons/en/megaupload_en" class="hide-on-phones hide-on-tablets nice radius large blue button">Join!</a></p>
 		<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="four columns">
-        <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="nice radius large blue button wide">Join!</a></p>
+        <p><a href="https://xifrat.pirata.cat/commons/en/megaupload_en" class="nice radius large blue button wide">Join!</a></p>
         <p><a href="https://xifrat.pirata.cat/en/donacions" class="nice radius large white button wide">Donate</a></p>
         <h4>An initiative of</h4>
         <div class="row image">
@@ -92,7 +92,7 @@
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
-          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li>
+          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li><li><a href="http://www.piratenpartei.de/">Piratenpartei Deutschland</a></li>
         </ul>
       </div>
     </div>
